# dune

./: .dune-prelude  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  demo.cast  history.txt  test.sh
.github/workflows/: release.yml  test.yml
benches/: dune-prelude  parser_benchmark.rs
src/: .default-dune-prelude  .dune-prelude  .intro-dune-prelude  bin.rs  env.rs  error.rs  expr.rs  history.txt  lib.rs  parser.pest  parser.rs  tokenizer.rs  tokens.rs
src/binary/: init_environment.rs  mod.rs
src/binary/help/: builtin.txt  lib.txt  me.txt  prelude.txt  scripting.txt  suggestions.txt  syntax.txt  types.txt
src/binary/init/: chess_module.rs  console_module.rs  dict_module.rs  err_module.rs  fmt_module.rs  fn_module.rs  fs_module.rs  list_module.rs  log_module.rs  math_module.rs  mod.rs  operator_module.rs  os_module.rs  parse_module.rs  pipe_module.rs  rand_module.rs  shell_module.rs  string_module.rs  sys_module.rs  widget_module.rs
src/binary/init_environment/: console_module.rs  fmt_module.rs  fn_module.rs  fs_module.rs  math_module.rs  os_module.rs  rand_module.rs  shell_module.rs  time_module.rs  widget_module.rs
src/tests/: mod.rs
