[package]
name = "dune"
version = "0.1.5"
authors = ["Adam McDaniel <adam.mcdaniel17@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
description = "A shell by the beach!"
readme = "README.md"
documentation = "https://docs.rs/dune"
homepage = "https://github.com/adam-mcdaniel/dune"
repository = "https://github.com/adam-mcdaniel/dune"

[[bin]]
name = "dune"
path = "src/bin.rs"

[dependencies]
chrono = "0.4.19"
comment = "0.1.1"
textwrap = "0.14.2"
prettytable-rs = "0.8.0"
nom = "7.0.0"
rand = "0.8"
ctrlc = "3.2.0"
os_info = "3.0.7"
common_macros = "0.1.1"
snailquote = "0.3.0"
rustyline = "9.0.0"
rustyline-derive = "0.5"
dirs = "4.0.0"
dunce = "1.0.2"
chess-engine = "0.1.2"